	* src/universal-cp-gui.c:
	* src/universal-cp-icons.c:
	* src/universal-cp.c:
	* src/xml/Makefile.am:

	Install the xml files too and make network-light be able to run
	installed.

2007-09-04  Matthew Allum  <mallum@openedhand.com>

	* src/network-light-gui.c:
	
	Get light images from installed dir rather than local source dir.

2007-09-05  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-icons.c:
                
	Preserve the aspect-ratio of the original image.

2007-09-04  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/universal-cp-devicetreeview.c:

	Use icon types rather than icons to identify the treeview rows.

2007-09-04  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/network-light-gui.c:

	Initialize label of the "On" menuitem only at startup and set it's state
	according to light-bulb status each time it pop's up.

2007-09-04  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/gupnp-network-light.glade:

	Remove all the spacing around the light-bulb image as it doesn't suit
	the new background color of the image.

2007-09-04  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/pixmaps/network-light-off.png:
	* src/pixmaps/network-light-on.png:

	Use newer, cool icons from Lapo Calamandrei
	<calamandrei@gmail.com> for network light.

2007-09-04  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/xml/network-light-desc.xml:

	Append a '/' to icon URL.

2007-09-04  Zeeshan Ali  <zeenix@gstreamer.net>
	* src/universal-cp-devicetreeview.c:
	* src/universal-cp-devicetreeview.h:
	* src/universal-cp-gui.c:
	* src/universal-cp-icons.c:
	* src/universal-cp-icons.h:
	* src/universal-cp.c:

	Prefer to use icon from the device to reprent it.

2007-09-03  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/Makefile.am:
	* src/universal-cp-devicetreeview.c:
	* src/universal-cp-gui.c:
	* src/universal-cp-gui.h:
	* src/universal-cp-icons.c:
	* src/universal-cp-icons.h:

	Put icons handling into a separate module.

2007-09-02  Zeeshan Ali  <zeenix@gstreamer.net>

	* src/gupnp-network-light.glade:
